Designed till sign in sign up

--- a/app/src/main/res/layout/fragment_signup_form.xml
+++ b/app/src/main/res/layout/fragment_signup_form.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/primaryBackground"
-    tools:context=".authorization.LoginFragment">
+    tools:context=".authorization.SignupFormFragment">
 
     <ImageButton
         android:id="@+id/imageButton"
@@ -29,7 +28,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
-        android:text="Let's Sigin you in."
+        android:text="Create an account"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
         android:textColor="@color/textPrimaryWhite"
         android:textSize="30sp"
@@ -42,10 +41,10 @@
 
     <TextView
         android:id="@+id/textView5"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="Welcome back. \n You have been missed."
+        android:text="Lets create your account and set up up"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textColor="@color/textPrimaryWhite"
         android:textSize="24sp"
@@ -64,7 +63,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:background="@drawable/round_edittext"
-        android:hint="Phone, email, username...."
+        android:hint="Enter your email..."
         android:padding="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -79,7 +78,7 @@
         android:layout_marginTop="8dp"
         android:background="@drawable/round_edittext"
         android:ems="10"
-        android:hint="Password..."
+        android:hint="Enter password of choice...."
         android:inputType="textPassword"
         android:padding="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -95,7 +94,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="16dp"
-        android:text="Sign in"
+        android:text="Sign up"
         android:textAllCaps="false"
         app:backgroundTint="@color/selectedHighlight"
         app:cornerRadius="10dp"
@@ -110,7 +109,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:text="Don't have account? "
+        android:text="Already have account? "
         android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/button2"
         app:layout_constraintEnd_toStartOf="@+id/textView8"
@@ -124,7 +123,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:text="Register"
+        android:text="Sign in"
         android:textColor="@color/selectedHighlight"
         android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/button2"
@@ -142,7 +141,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
-        android:src="@drawable/ic_undraw_login_re_4vu2"
+        android:src="@drawable/ic_signup"
         app:layout_constraintBottom_toTopOf="@+id/textView7"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
