--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,18 +3,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/signUpFragment">
+    app:startDestination="@id/signInCheckerFragment">
 
     <fragment
         android:id="@+id/homeFragment"
-        android:name="com.example.topnote.HomeFragment"
+        android:name="com.example.topnote.Fragments.HomeFragment"
         android:label="fragment_home"
         tools:layout="@layout/fragment_home" />
     <fragment
         android:id="@+id/loginFragment"
         android:name="com.example.topnote.authorization.LoginFragment"
         android:label="fragment_login"
-        tools:layout="@layout/fragment_login" >
+        tools:layout="@layout/fragment_login">
         <action
             android:id="@+id/action_loginFragment_to_homeFragment"
             app:destination="@id/homeFragment" />
@@ -23,12 +23,36 @@
         android:id="@+id/signUpFragment"
         android:name="com.example.topnote.authorization.SignUpFragment"
         android:label="fragment_sign_up"
-        tools:layout="@layout/fragment_sign_up" >
+        tools:layout="@layout/fragment_sign_up">
+        <action
+            android:id="@+id/action_signUpFragment_to_signupFormFragment"
+            app:destination="@id/signupFormFragment" />
         <action
             android:id="@+id/action_signUpFragment_to_loginFragment"
             app:destination="@id/loginFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/signupFormFragment"
+        android:name="com.example.topnote.authorization.SignupFormFragment"
+        android:label="fragment_signup_form"
+        tools:layout="@layout/fragment_signup_form" >
         <action
-            android:id="@+id/action_signUpFragment_to_homeFragment2"
+            android:id="@+id/action_signupFormFragment_to_loginFragment"
+            app:destination="@id/loginFragment" />
+        <action
+            android:id="@+id/action_signupFormFragment_to_homeFragment"
+            app:destination="@id/homeFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/signInCheckerFragment"
+        android:name="com.example.topnote.authorization.SignInCheckerFragment"
+        android:label="fragment_sign_in_checker"
+        tools:layout="@layout/fragment_sign_in_checker" >
+        <action
+            android:id="@+id/action_signInCheckerFragment_to_signUpFragment"
+            app:destination="@id/signUpFragment" />
+        <action
+            android:id="@+id/action_signInCheckerFragment_to_homeFragment"
             app:destination="@id/homeFragment" />
     </fragment>
 </navigation>
