--- a/app/src/main/res/layout/fragment_signup_form.xml
+++ b/app/src/main/res/layout/fragment_signup_form.xml
@@ -8,7 +8,7 @@
     tools:context=".authorization.SignupFormFragment">
 
     <ImageButton
-        android:id="@+id/imageButton"
+        android:id="@+id/backBtn_signUpFormFragment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -32,12 +32,12 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
         android:textColor="@color/textPrimaryWhite"
         android:textSize="30sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/EmailTextField_SignUpFragment"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.05"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageButton"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.35000002" />
 
     <TextView
         android:id="@+id/textView5"
@@ -56,7 +56,7 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/textInputEditText"
+        android:id="@+id/EmailTextField_SignUpFragment"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -72,7 +72,7 @@
         app:layout_constraintVertical_bias="0.41000003" />
 
     <EditText
-        android:id="@+id/editTextTextPassword"
+        android:id="@+id/Password_Field_SignUp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -82,13 +82,13 @@
         android:inputType="textPassword"
         android:padding="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/textInputEditText"
-        app:layout_constraintStart_toStartOf="@+id/textInputEditText"
-        app:layout_constraintTop_toBottomOf="@+id/textInputEditText"
+        app:layout_constraintEnd_toEndOf="@+id/EmailTextField_SignUpFragment"
+        app:layout_constraintStart_toStartOf="@+id/EmailTextField_SignUpFragment"
+        app:layout_constraintTop_toBottomOf="@+id/EmailTextField_SignUpFragment"
         app:layout_constraintVertical_bias="0.0" />
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/button2"
+        android:id="@+id/SignUpBtn_SignUpFragment"
         android:layout_width="0dp"
         android:layout_height="55dp"
         android:layout_marginStart="24dp"
@@ -99,8 +99,8 @@
         app:backgroundTint="@color/selectedHighlight"
         app:cornerRadius="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword"
-        app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
+        app:layout_constraintEnd_toEndOf="@+id/Password_Field_SignUp"
+        app:layout_constraintStart_toStartOf="@+id/Password_Field_SignUp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0" />
 
@@ -111,11 +111,11 @@
         android:layout_marginBottom="8dp"
         android:text="Already have account? "
         android:textSize="14sp"
-        app:layout_constraintBottom_toTopOf="@+id/button2"
+        app:layout_constraintBottom_toTopOf="@+id/SignUpBtn_SignUpFragment"
         app:layout_constraintEnd_toStartOf="@+id/textView8"
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
+        app:layout_constraintTop_toBottomOf="@+id/Password_Field_SignUp"
         app:layout_constraintVertical_bias="1.0" />
 
     <TextView
@@ -126,11 +126,11 @@
         android:text="Sign in"
         android:textColor="@color/selectedHighlight"
         android:textSize="14sp"
-        app:layout_constraintBottom_toTopOf="@+id/button2"
+        app:layout_constraintBottom_toTopOf="@+id/SignUpBtn_SignUpFragment"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/textView7"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
+        app:layout_constraintTop_toBottomOf="@+id/Password_Field_SignUp"
         app:layout_constraintVertical_bias="1.0" />
 
     <ImageView
@@ -145,7 +145,7 @@
         app:layout_constraintBottom_toTopOf="@+id/textView7"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />
+        app:layout_constraintTop_toBottomOf="@+id/Password_Field_SignUp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
